kubia-manual-with-labels.yml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-manual-v2
  labels:
    creation-method: manual
    env: prod
spec:
  containers:
  - image: luksa/kubia
    name: kubia
    ports:
    - containerPort: 8080
      protocol: TCP
