expose-multiple-svcs-same-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia
  - host: kubia.example.com
    http:
      paths:
      - path: /kubia
        backend:
          serviceName: kubia
          servicePort: 80
      - path: /bar
        backend:
          serviceName: bar
          servicePort: 80
